--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,8 +41,8 @@ import ThemeToggle from "./ThemeToggle.astro";
           </a>
         </li>
         <li>
-          <a href="#section6" class="text-gray-700 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 font-medium transition-colors">
-            Section 6
+          <a href="#contact" class="text-gray-700 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 font-medium transition-colors">
+            Contacts
           </a>
         </li>
       </ul>
